<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.airmh.soundllysdktest.MainActivity" >
        
 	<Button
    	android:id="@+id/activityRunButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/activity_run_button_text"/>
        
	<Button
    	android:id="@+id/notActivityRunButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/notactivity_run_button_text"/>
	
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
	    android:gravity="center"
	    android:text="@string/result_text"/>
	
	<ListView
	    android:id="@+id/resultListView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
    
</LinearLayout>