<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical">
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:textColor="#000000"
	            android:text="@string/type"/>
	        <TextView
	            android:id="@+id/typeTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#000000"
	            android:layout_marginLeft="5dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:textColor="#000000"
	            android:text="@string/key"/>
	        <TextView
	            android:id="@+id/keyTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#000000"
	            android:layout_marginLeft="5dp"/>
        </LinearLayout>
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:textColor="#000000"
	            android:text="@string/value"/>
	        <TextView
	            android:id="@+id/valueTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#000000"
	            android:layout_marginLeft="5dp"/>
        </LinearLayout>
        
	</LinearLayout>
</LinearLayout>